--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.9.0",
+    "axios": "^1.6.1",
     "bootstrap": "^5.1.3",
     "next": "^12.1.6",
     "next-pwa": "^5.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-modal-video": "^1.2.8",
+    "react-toastify": "^9.1.3",
     "sass": "^1.53.0",
     "sharp": "^0.30.6",
     "swiper": "^8.3.1"
